correcting align contents

--- a/style.css
+++ b/style.css
@@ -12,16 +12,20 @@ p {
   /*all paragraph unless otherwise noted will be 16px*/
   font-size: 16px;
 }
-/* div,
-h2,
+div,
 nav,
 footer,
 p,
 ol li,
-h1
+h1,
+h2,
+h3,
+ul li
  {
   text-align: center;
-} */
+  align-items: center;
+  margin: 0%;
+}
 header > div {
   background-image: linear-gradient(to right, #b22222, #fff);
   padding: 10px;
@@ -58,7 +62,7 @@ footer {
 ol,
 ul {
   list-style-position: inside; /*bullet and number move closer to the text*/
-  /* align-items: center; */
+  align-items: center;
 }
 ol li
 {
@@ -68,12 +72,12 @@ ol li
 /* .left-align {
   text-align: left;
 } */
-h1, h2, h3
+/* h1, h2, h3
 { 
   text-align: center;
   margin-left: 0px;
   margin-right: 0px;
-}
+} */
 /*gives more details regarding the links*/
 a:link {
   color: blue;
